update  celll cloud