@@ -27,9 +27,13 @@ THE SOFTWARE.
 package net.cellcloud.talk.dialect;
 
 import java.util.LinkedList;
+import java.util.Map;
+import java.util.Vector;
 import java.util.concurrent.ConcurrentHashMap;
 
 import net.cellcloud.common.Logger;
+import net.cellcloud.core.Cellet;
+import net.cellcloud.talk.TalkService;
 
 /** 块数据传输方言工厂。
  * 
@@ -42,6 +46,8 @@ public class ChunkDialectFactory extends DialectFactory {
 
 	private ConcurrentHashMap<String, Cache> cacheMap;
 
+	private ConcurrentHashMap<String, Queue> queueMap;
+
 	private long cacheMemorySize = 0;
 	private final long clearThreshold = 100 * 1024 * 1024;
 	private Object mutex = new Object();
@@ -50,6 +56,7 @@ public class ChunkDialectFactory extends DialectFactory {
 	public ChunkDialectFactory() {
 		this.metaData = new DialectMetaData(ChunkDialect.DIALECT_NAME, "Chunk Dialect");
 		this.cacheMap = new ConcurrentHashMap<String, Cache>();
+		this.queueMap = new ConcurrentHashMap<String, Queue>();
 	}
 
 	@Override
@@ -68,15 +75,101 @@ public class ChunkDialectFactory extends DialectFactory {
 		this.cacheMemorySize = 0;
 	}
 
-	protected void write(ChunkDialect chunk) {
+	@Override
+	protected synchronized boolean onTalk(String identifier, Dialect dialect) {
+		return true;
+	}
+
+	@Override
+	protected synchronized boolean onDialogue(String identifier, Dialect dialect) {
+		return true;
+	}
+
+	@Override
+	protected boolean onTalk(Cellet cellet, String targetTag, Dialect dialect) {
+		ChunkDialect chunk = (ChunkDialect) dialect;
+
+		if (chunk.getChunkIndex() == 0 || chunk.infectant || chunk.ack) {
+			// 直接发送
+
+			// 回调已处理
+			chunk.fireProgress(targetTag);
+
+			return true;
+		}
+		else {
+			Queue queue = this.queueMap.get(chunk.getSign());
+			if (null != queue) {
+				// 写入队列
+				queue.enqueue(chunk);
+				// 劫持，由队列发送
+				return false;
+			}
+			else {
+				queue = new Queue(targetTag.toString(), chunk.getChunkNum());
+				queue.enqueue(chunk);
+				this.queueMap.put(chunk.getSign(), queue);
+				// 劫持，由队列发送
+				return false;
+			}
+		}
+	}
+
+	@Override
+	protected boolean onDialogue(final Cellet cellet, final String sourceTag, Dialect dialect) {
+		ChunkDialect chunk = (ChunkDialect) dialect;
+
+		if (!chunk.ack) {
+			// 回送确认
+			String sign = chunk.getSign();
+
+			final ChunkDialect ack = new ChunkDialect();
+			ack.setAck(sign, chunk.getChunkIndex(), chunk.getChunkNum());
+
+			TalkService.getInstance().getExecutor().execute(new Runnable() {
+				@Override
+				public void run() {
+					// 回送 ACK
+					cellet.talk(sourceTag, ack);
+				}
+			});
+
+			// 不劫持
+			return true;
+		}
+		else {
+			// 收到 ACK ，发送下一个
+			String sign = chunk.getSign();
+			Queue queue = this.queueMap.get(sign);
+			if (null != queue) {
+				// 更新应答索引
+				queue.ackIndex = chunk.getChunkIndex();
+				// 发送下一条数据
+				ChunkDialect response = queue.dequeue();
+				if (null != response) {
+					cellet.talk(queue.target, response);
+				}
+
+				// 检查
+				if (queue.ackIndex == chunk.getChunkNum() - 1) {
+					this.checkAndClearQueue();
+				}
+			}
+
+			// 应答包，劫持
+			return false;
+		}
+	}
+
+	protected synchronized void write(ChunkDialect chunk) {
 		String tag = chunk.getOwnerTag();
 		if (this.cacheMap.containsKey(tag)) {
 			Cache cache = this.cacheMap.get(tag);
-			cache.push(chunk);
+			cache.offer(chunk);
 		}
 		else {
 			Cache cache = new Cache(tag);
-			cache.push(chunk);
+			cache.offer(chunk);
 			this.cacheMap.put(tag, cache);
 		}
 
@@ -143,26 +236,50 @@ public class ChunkDialectFactory extends DialectFactory {
 		}
 	}
 
+	private void checkAndClearQueue() {
+		LinkedList<String> deleteList = new LinkedList<String>();
+
+		for (Map.Entry<String, Queue> entry : this.queueMap.entrySet()) {
+			Queue queue = entry.getValue();
+			if (queue.ackIndex >= 0 && queue.chunkNum - 1 == queue.ackIndex) {
+				// 删除
+				deleteList.add(entry.getKey());
+			}
+		}
+
+		if (!deleteList.isEmpty()) {
+			for (String sign : deleteList) {
+				this.queueMap.remove(sign);
+
+				Logger.i(this.getClass(), "Clear chunk factory queue: " + sign);
+			}
+
+			deleteList.clear();
+		}
+
+		deleteList = null;
+	}
+
 	/**
 	 * 内部缓存。
 	 */
 	private class Cache {
 		protected String tag;
-		private ConcurrentHashMap<String, LinkedList<ChunkDialect>> data;
-		private LinkedList<String> signQueue;
-		private LinkedList<Long> signTimeQueue;
+		private ConcurrentHashMap<String, Vector<ChunkDialect>> data;
+		private Vector<String> signQueue;
+		private Vector<Long> signTimeQueue;
 		protected long dataSize;
 
 		private Cache(String tag) {
 			this.tag = tag;
-			this.data = new ConcurrentHashMap<String, LinkedList<ChunkDialect>>();
-			this.signQueue = new LinkedList<String>();
-			this.signTimeQueue = new LinkedList<Long>();
+			this.data = new ConcurrentHashMap<String, Vector<ChunkDialect>>();
+			this.signQueue = new Vector<String>();
+			this.signTimeQueue = new Vector<Long>();
 			this.dataSize = 0;
 		}
 
-		public void push(ChunkDialect dialect) {
-			LinkedList<ChunkDialect> list = this.data.get(dialect.sign);
+		public void offer(ChunkDialect dialect) {
+			Vector<ChunkDialect> list = this.data.get(dialect.sign);
 			if (null != list) {
 				synchronized (list) {
 					list.add(dialect);
@@ -171,7 +288,7 @@ public class ChunkDialectFactory extends DialectFactory {
 				}
 			}
 			else {
-				list = new LinkedList<ChunkDialect>();
+				list = new Vector<ChunkDialect>();
 				list.add(dialect);
 				// 更新数据大小
 				this.dataSize += dialect.length;
@@ -186,14 +303,14 @@ public class ChunkDialectFactory extends DialectFactory {
 		}
 
 		public ChunkDialect get(String sign, int index) {
-			LinkedList<ChunkDialect> list = this.data.get(sign);
+			Vector<ChunkDialect> list = this.data.get(sign);
 			synchronized (list) {
 				return list.get(index);
 			}
 		}
 
 		public boolean checkCompleted(String sign) {
-			LinkedList<ChunkDialect> list = this.data.get(sign);
+			Vector<ChunkDialect> list = this.data.get(sign);
 			if (null != list) {
 				ChunkDialect cd = list.get(0);
 				if (cd.chunkNum == list.size()) {
@@ -206,7 +323,7 @@ public class ChunkDialectFactory extends DialectFactory {
 
 		public long clear(String sign) {
 			long size = 0;
-			LinkedList<ChunkDialect> list = this.data.remove(sign);
+			Vector<ChunkDialect> list = this.data.remove(sign);
 			if (null != list) {
 				synchronized (list) {
 					for (ChunkDialect chunk : list) {
@@ -233,16 +350,54 @@ public class ChunkDialectFactory extends DialectFactory {
 
 		public long getFirstTime() {
 			synchronized (this.signQueue) {
-				return this.signTimeQueue.getFirst().longValue();
+				return this.signTimeQueue.get(0).longValue();
 			}
 		}
 
 		public long clearFirst() {
 			String sign = null;
 			synchronized (this.signQueue) {
-				sign = this.signQueue.getFirst();
+				sign = this.signQueue.get(0);
 			}
 			return this.clear(sign);
+		}
+	}
+
+	private class Queue {
+		private String target;
+		private Vector<ChunkDialect> queue;
+
+		protected int ackIndex = -1;
+
+		protected int chunkNum = 0;
+
+		private Queue(String target, int chunkNum) {
+			this.target = target;
+			this.chunkNum = chunkNum;
+			this.queue = new Vector<ChunkDialect>();
+		}
+
+		protected void enqueue(ChunkDialect chunk) {
+			// 标识为已污染
+			chunk.infectant = true;
+
+			synchronized (this) {
+				this.queue.add(chunk);
+			}
+		}
+
+		protected ChunkDialect dequeue() {
+			synchronized (this) {
+				if (this.queue.isEmpty()) {
+					return null;
+				}
+
+				ChunkDialect first = this.queue.get(0);
+				if (null != first) {
+					this.queue.remove(0);
+				}
+				return first;
+			}
 		}
 	}
 
